[Linux] Menu shows up in wrong position when using i3 windows manager in full screen mode

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • jfx25
    • Affects Version/s: jfx22
    • Component/s: javafx
    • None

      After the fix for JDK-8251240, the menus on Linux with the i3 windows manager work fine and show up at the expected position.

      However, when entering fullscreen mode, the menus show an unexpected offset.

      The attached test can be used to reproduce the issue.
      Run the test on Linux with i3 wm, click on the File menu, and the menu popup will show up just fine ("menu_i3wm.png").
      Enter full screen mode (mod+F), click on the File menu, and the menu popup will show up with an unexpected offset ("menu_i3wm_fullscreen.png").

        1. I3.java
          1 kB
        2. menu_i3wm.png
          menu_i3wm.png
          31 kB
        3. menu_i3wm_fullscreen.png
          menu_i3wm_fullscreen.png
          17 kB
        4. MenuBarTestApp.java
          2 kB

            Assignee:
            Thiago Sayao
            Reporter:
            Jose Pereda
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: