8348095: [Linux] Menu shows up in wrong position when using i3 windows manager in full screen mode